--- a/_posts/2015-07-17-git_split.md
+++ b/_posts/2015-07-17-git_split.md
@@ -1,6 +1,11 @@
 ---
 layout: post
 title: git分割补丁
+description: 如何简单的将一个commit分成几个? 活用git rebase -i 就可以解决绝大部分补丁整理的问题。
+categories:
+- 技术
+tags:
+- git
 ---
 
 活用git rebase -i 就可以解决绝大部分补丁整理的问题。  
@@ -26,10 +31,13 @@ Date:   Thu Jul 2 23:23:51 2015 +0800
 msvcp110: Add tr2_sys__Link implementation and test.  
   
 ===========
+
 假设我们想要分割 msvcp110: Add tr2_sys__Unlink implementation and test.这个commit，可以直接使用  
 git rebase -i HEAD~7（数字随意，反正在Unlink这个commit前就可以了），选择Unlink这个commit，  
 改成edit。  
 一般情况下，就是这样修改commit的，修改后再git rebase --continue.  
+
 但是，我们需要的是分割补丁：  
 选择git rebase HEAD^,撤销这次commit，再把想改动的文件git add, 再git commit,这样就可以分割很多补丁。  
+
 最后，git rebase --continue就可以了。  
