--- a/_posts/2016-05-07-CPP11_begin.md
+++ b/_posts/2016-05-07-CPP11_begin.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: C++11begin语法糖
-description: 为什么C++11里有begin函数而没有cbegin()呢?
+description: 为什么C++11里有begin函数而没有rbegin()呢?
 categories:
 - 技术
 tags:
@@ -23,11 +23,11 @@ tags:
     sort(begin(a), end(a));
 ```
 
-但是, C++11并没有提供cbegin()函数,以下代码会报错.
+但是, C++11并没有提供rbegin()函数,以下代码会报错.
 
 ```
     vector<int> a(100, 1);
-    for(auto it = cbegin(a); it!=cend(a); ++it)
+    for(auto it = rbegin(a); it!=rend(a); ++it)
         cout<<*it<<" ";
 ```
 
