--- a/_posts/2016-06-21-LinuxC.md
+++ b/_posts/2016-06-21-LinuxC.md
@@ -1,6 +1,11 @@
 ---
 layout: post
-title: Linux C一站式编程答案
+title: Linux C 编程一站式学习答案
+description: 由于网上没有[Linux C编程一站式学习](https://book.douban.com/subject/4141733/)的答案, 于是便整理出此book. 欢迎大家增删补漏, 改正错误的地方. 谢谢.
+categories:
+- 技术
+tags:
+- C++
 ---
 
 # Linux C一站式学习答案
