--- a/_posts/2016-12-09-GSoCLife.md
+++ b/_posts/2016-12-09-GSoCLife.md
@@ -54,9 +54,14 @@ dlls/msvcp90$ grep pow *.c
 ```
 Dear YongHao,
 
-We received another very strong application for the RE2 project from Qin Wenfeng who has already implemented a working prototype https://github.com/qinwf/re2r
+We received another very strong application for
+the RE2 project from Qin Wenfeng who
+has already implemented a working prototype https://github.com/qinwf/re2r
 
-It may be possible for you both to work on the RE2 project in GSOC, if you write proposals to implement very different but complementary features. I would encourage you to write an email to Qin and start a discussion about which different features you both could work on.
+It may be possible for you both to work on the RE2 project in GSOC,
+if you write proposals to implement very different but complementary features. 
+I would encourage you to write an email to Qin and start a discussion
+about which different features you both could work on.
 ```
 
 告知我已经有一位中国学生完成了re2项目的原型了@-@，囧死了。得知wenfeng是一位经验丰富的R user以及已经完成了prototype，项目量不够两个人合作，便放弃了此项目。我打算准备的另一个项目BOOST也刚好在这年拿不到GSoC的名额， 于是我又投回Wine的怀抱，此时挑战的是更难的项目: concurrency库，也因太难而选不上了，太难了mentor不会冒风险尝试。后来因为忙着找工作的事情，就没有继续填坑了，希望之后有机会继续填。
