2016-08-01-Akuna_bar.md

--- a/_posts/2016-08-01-Akuna_bar.md
+++ b/_posts/2016-08-01-Akuna_bar.md
@@ -6,11 +6,14 @@ categories:
 - 技术
 tags:
 - C++
----
+--
 
 首先做了笔试题， 我觉得笔试题非常好, 才对公司有兴趣的.
+笔试题忘记了
 
-##二面
+---
+
+## 二面
 全程英文，问了很多问题
 
 1. 算法，判断一个数是否power of two的方法， quicksort过程，平均，最差时间复杂度，例子是怎么样
