--- a/_posts/2018-03-22-note.md
+++ b/_posts/2018-03-22-note.md
@@ -8,6 +8,23 @@ tags:
 - go
 ---
 
+
+用 strace debug。
+当一个程序在跑时，也许进入了死锁的状态，你无法得知。
+这时可以用 strace 来看这个二进制程序在 linux 上的系统调用，确认他是否有在运行。
+而我 debug 时，通过这个确认了一个程序停留在 futex 的调用，futex 是 linux 进程资源冲突的一个间接层。
+以前都进程争夺资源，都需要从用户态（用户态就是普通程序正常运行的地方）转到内核态（内核态才能 调用内核的 API，保证了内核的稳定性，用户程序的崩溃不影响内核），而每次由用户态转到内核态，上下文切换是一个耗费资源的操作。
+于是就在用户态做了一个简单的锁，发现冲突时才转到内核态处理。
+
+---
+
+哈希表的业界常用做法：
+发生冲突时，链表开放法（z 这个数据结构书常说），另外一个是 先根据数据量给 hash 得到的 key 预分配桶（其实就是一个定序的数组），这个桶就存冲突的值，桶满了的话，就全部放到 一个大数组中。
+链表开放法优点是空间少，但冲突变多时，会退化成一个 Om 的算法（m 是链表的大小）因为要遍历这个链表。
+而预分配桶的做法是空间换时间。 因为预先有桶存，遍历的时间可以预计是 O1 （因为数组数量是固定的），预估的好，也很难全部退化到一个大数组中寻找
+
+---
+
 ubuntu 默认会把 coredump 转发到 apport 这个胶水层，而它又默认把 apport 关掉的。。
 所以docker 镜像选择 ubuntu 做系统时，要注意把 appportr 打开
 https://wiki.ubuntu.com/Apport
