--- a/_posts/2018-03-22-note.md
+++ b/_posts/2018-03-22-note.md
@@ -8,6 +8,11 @@ tags:
 - go
 ---
 
+---
+nginx 中, `sites-available` 是放所有vhosts的配置文件, 而`sites-enable` 则是放你想要开启能够被访问的 vhost 文件, 一般是建立一个`sites-available` 对应的文件的symlink(软链接).
+这样子做的好处是, 想关闭此 vhost 的访问时, 可以删除软连接即可, 恢复时重新创建, 可以避免把文件移来移去或者作备份等.
+
+---
 
 用 strace debug。
 当一个程序在跑时，也许进入了死锁的状态，你无法得知。
