--- a/_posts/2017-09-30-R_gc.md
+++ b/_posts/2017-09-30-R_gc.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: R 语言垃圾回收(gc算法)
-description:
+description: 因为是分代回收,所以函数里的临时变量都不会马上删掉, 而且每次重复赋值, 上一次的数据依然存在于内存. 这意味着, 你不断操作一个存了很大数据的变量时, 会占用非常多的内存, 此时便需要把不用的变量马上 gc 掉.
+categories:
 - 技术
 tags:
 - DNS
