--- a/_posts/2016-12-09-GSoCLife.md
+++ b/_posts/2016-12-09-GSoCLife.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 我的Google Summer Of Code经历
-description: 谷歌编程之夏（GSoC）的含金量高吗？
+description: 那段时间大致是我成长最快的一段时间吧，从自娱自乐写一些程序，到参与Wine这样一个有着10年历史与复杂架构的项目，从一个啥也不会的windows VS小白转到了linux vim开发。
 categories:
 - 技术
 tags:
