--- a/_posts/2018-03-22-note.md
+++ b/_posts/2018-03-22-note.md
@@ -54,5 +54,22 @@ https://wiki.ubuntu.com/Apport
 * 此模式限定虚拟机尽可以与宿主机通信，两者组成一个局域网。
 
 ---
+mongo 3.4 的 objectid 生成方式改了:
+
+* 从 `4 byte unix 秒, 3 byte 机器标识, 2 byte 的 process id, 3 byte 的累积计数器` 改成
+*    `4 byte unix 秒, 5 byte 的随机数, 3 byte 的累积计数器`
+
+可能之前3 byte 机器标识跟2 byte 的 process id 标识范围不够大，不如来个5byte 的随机值
+
+---
+http://119.29.78.110/
+
+遇到一个小问题，让我对 objectid 印象深刻。
+我抓的杂志，默认用 objectid 排序应该是没问题的，但是刚刚发现，新抓取的几本杂志顺序不符合预期.
+比较下来有些迷糊了, 最后才发现, 原来我抓取的时候是从最新的杂志抓到1995年, mongo默认从小到大排序, 因此一切符合预期.
+而当我一个月后, 抓取到最新的杂志时, 他们的 objectid 就是最大的..
+所以抓取的逻辑要从最旧到最新抓取, 才是对的.
+
+
 
 
