--- a/_posts/2018-03-22-note.md
+++ b/_posts/2018-03-22-note.md
@@ -70,6 +70,10 @@ http://119.29.78.110/
 而当我一个月后, 抓取到最新的杂志时, 他们的 objectid 就是最大的..
 所以抓取的逻辑要从最旧到最新抓取, 才是对的.
 
+---
 
+最大堆是优先队列，只保证父节点大于两个子节点
 
+堆排序是：每次只拿最大的那个出来
 
+二叉搜索树是： 左边子节点小于父节点，右边子节点大于父节点
