--- a/_posts/2018-03-22-note.md
+++ b/_posts/2018-03-22-note.md
@@ -77,3 +77,12 @@ http://119.29.78.110/
 堆排序是：每次只拿最大的那个出来
 
 二叉搜索树是： 左边子节点小于父节点，右边子节点大于父节点
+
+
+---
+dmesg 可以查看OOM 被 kill 的进程,内核信息等.
+
+Write the kernel messages to standard output.
+
+- Show kernel messages:
+    dmesg
